--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Ohffs\\Ldap\\LdapServiceProvider"
+                "Ohffs\\Ldap\\LdapServiceProvider",
+		"Ohffs\\Ldap\\LdapConnectionProvider"
             ],
             "aliases": {
                 "Ldap": "Ohffs\\Ldap\\LdapFacade"
